packages/carbon-web-components/src/components/data-table/_table-core.scss
/* ... */
:host(#{$prefix}-table-header-cell[sort-direction]) {
  block-size: $spacing-09;

  .#{$prefix}--table-sort__flex {
    display: flex;
    align-items: center;
    justify-content: space-between;
    block-size: 100%;
    inline-size: 100%;
    min-block-size: $spacing-09;
  }
}

:host(#{$prefix}-table-header-cell[slug]),
:host(#{$prefix}-table-header-cell[slug]) .#{$prefix}--table-sort {
  @include ai-table-gradient();

  box-shadow: inset 0 1px $ai-border-strong;
}

:host(#{$prefix}-table-header-cell[slug]) .#{$prefix}--table-sort {
  background: none;
}

:host(#{$prefix}-table-header-cell[sticky-header]) {
  overflow: hidden;

  border-block-end: 1px solid $layer-active;
  inline-size: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
}

:host(#{$prefix}-table-header-cell[sticky-header]:not([is-sortable])) {
  padding-block-start: rem(14px);
}

:host(#{$prefix}-table-header-cell[slug]:not([is-sortable])) {
  .#{$prefix}--table-header-label--slug {
    display: flex;
    align-items: center;
  }

  ::slotted(#{$prefix}-slug) {
    margin-inline-start: auto;
  }
}

//
// Common style for table cell and table header cell
//

:host(#{$prefix}-table-header-row) ::slotted(#{$prefix}-table-header-cell),
:host(#{$prefix}-table-header-row) .#{$prefix}--table-column-checkbox,
:host(#{$prefix}-table-header-expand-row)
  ::slotted(#{$prefix}-table-header-cell),
:host(#{$prefix}-table-header-expand-row) .#{$prefix}--table-expand,
:host(#{$prefix}-table-header-expand-row) .#{$prefix}--table-column-checkbox,
:host(#{$prefix}-table-row) ::slotted(#{$prefix}-table-cell),
:host(#{$prefix}-table-row) ::slotted(#{$prefix}-table-cell-skeleton),
:host(#{$prefix}-table-row) .#{$prefix}--table-column-checkbox,
:host(#{$prefix}-table-expand-row) ::slotted(#{$prefix}-table-cell),
:host(#{$prefix}-table-expand-row) ::slotted(#{$prefix}-table-cell-skeleton),
:host(#{$prefix}-table-expand-row) .#{$prefix}--table-expand,
:host(#{$prefix}-table-expand-row) .#{$prefix}--table-column-checkbox {
  display: table-cell;
}

//
// Table header row
//

:host(#{$prefix}-table-head) ::slotted(#{$prefix}-table-header-row),
:host(#{$prefix}-table-head) ::slotted(#{$prefix}-table-header-expand-row) {
  display: table-row;
  block-size: $spacing-09;
}

//
// Table header cell
//
:host(#{$prefix}-table-header-row) {
  outline: none;

  ::slotted(#{$prefix}-table-header-cell),
  ::slotted(#{$prefix}-table-header-cell-skeleton) {
    display: table-cell;
    background-color: $layer-accent-01;
    color: $text-primary;
    outline: none;
    text-align: start;
  }

  ::slotted(#{$prefix}-table-header-cell),
  .#{$prefix}--table-expand,
  .#{$prefix}--table-column-checkbox {
    padding-inline: $spacing-05;
    text-align: start;
    vertical-align: middle;
  }

  ::slotted(#{$prefix}-table-header-cell:first-of-type),
  ::slotted(#{$prefix}-table-header-cell-skeleton:first-of-type) {
    padding-inline-start: $spacing-05;
  }
}

:host(#{$prefix}-table-header-row:not([batch-expansion])) {
  .#{$prefix}--table-expand__button {
    display: none;
  }
}

:host(#{$prefix}-table-header-row[selection-name]) {
  .#{$prefix}--table-expand {
    display: table-cell;
  }
}

:host(#{$prefix}-table-header-row[sticky-header]) {
  #{$prefix}-checkbox {
    margin: 0;
    border-block-end: 1px solid $layer-active;
    padding-block-start: $spacing-04;
  }
}

:host(#{$prefix}-table-header-row[expandable]),
:host(#{$prefix}-table-row[expandable]),
:host(#{$prefix}-table-header-row[selection-name]),
:host(#{$prefix}-table-row[selection-name]) {
  .#{$prefix}--table-expand {
    padding: $spacing-03;
    block-size: $spacing-07;
    inline-size: $spacing-07;
    padding-inline-end: 0;
  }
}

:host(#{$prefix}-table-header-row[expanded]),
:host(#{$prefix}-table-row[expanded]) {
  transition: transform $duration-moderate-01 motion(standard, productive);
  .#{$prefix}--table-expand__svg {
    transform: rotate(270deg);
  }
}

:host(#{$prefix}-table-header-row),
:host(#{$prefix}-table-row) {
  .#{$prefix}--table-column-checkbox div,
  .#{$prefix}--table-expand div {
    display: flex;
    block-size: 100%;
  }
}

//
// Table row
//

:host(#{$prefix}-table-body) {
  ::slotted(#{$prefix}-table-row),
  ::slotted(#{$prefix}-table-expand-row) {
    display: table-row;
    border: none;
    block-size: $spacing-09;
    inline-size: 100%;
    outline: none;
  }
}

:host(#{$prefix}-table-body[sticky-header]) {
  ::slotted(#{$prefix}-table-row),
  ::slotted(#{$prefix}-table-expand-row) {
    display: flex;
  }
}

//
// Table cell
//

:host(#{$prefix}-table-cell) {
  padding: 0 $spacing-05;
  border-block-end: 1px solid $border-subtle;

  ::slotted(#{$prefix}-overflow-menu:hover) {
    background-color: none;
  }
}

:host(#{$prefix}-table-cell[overflow-menu-on-hover]) {
  ::slotted(*) {
    opacity: 0;
  }
}

:host(#{$prefix}-table-cell[slug-in-header]) {
  @include ai-table-gradient;
}

:host(#{$prefix}-table-cell-content) {
  @include type-style('label-01');

  display: block;
}

:host(#{$prefix}-table-row[sticky-header]),
:host(#{$prefix}-table-expand-row[sticky-header]) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton) {
    inline-size: 100%;
    padding-block-start: rem(14px);
  }
}

:host(#{$prefix}-table-row[size='xl']),
:host(#{$prefix}-table-expand-row[size='xl']) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton) {
    vertical-align: top;
  }
}

:host(#{$prefix}-table-row),
:host(#{$prefix}-table-expand-row) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton),
  .#{$prefix}--table-expand,
  .#{$prefix}--table-column-checkbox {
    color: $text-secondary;
    vertical-align: middle;
  }
}
/* ... */

